# palpites

./: .flaskenv  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  run.sh  settings.toml
migrations/versions/: 3f828ac55a84_vinculo_jogador_usuario.py  4c7ceaadf2cf_campo_do_torneio_na_tabela_rodada.py  5e3a13f91932_criar_coluna_de_torneio_no_grupo.py  6e3d9e28269d_criar_tabela_torneio.py  6ff50209fd65_coluna_rodada_atual.py  a344b1ce4a7d_vinculo_jogador_grupo.py  a39538758585_criar_tabela_grupo.py  c4469d054a9d_criar_tabela_de_usuario.py  d1967afe0d42_criar_coluna_pontos.py  dd8917fb45b8_campo_de_papeis.py  e6151d573d1f_tabela_time_torneio.py  fb6153bb5af4_campo_data_criacao_grupo.py
palpites/: __init__.py
palpites/blueprints/: views.py
palpites/blueprints/auth/: __init__.py
palpites/blueprints/auth/templates/auth/: base.html  login.html
palpites/blueprints/grupo/: __init__.py
palpites/blueprints/grupo/templates/grupo/: base.html  grupo.html  index.html
palpites/ext/: auth.py  authorization.py  cli.py  configuration.py  database.py  fachada.py  forms.py  repository.py  utils.py
palpites/static/: estilos.css
palpites/templates/: base.html  index.html  jogadores.html  palpite.html  palpites.html  palpites_jogador.html  parciais.html  partida.html  partidas.html  rodadas.html  time.html  times.html
