[tool.poetry]
name = "palpites"
version = "0.1.0"
description = "Webapp para organizar palpites em partidas de campetebol"
authors = ["Claudio Torcato <claudiotorcato@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
dynaconf = "3.1.12"
sqlalchemy = "^2.0.0"
flask-sqlalchemy = "^3.0.0"
wtforms = "^3.0.0"
alembic = "1.11.1"
click = "8.1.3"
python-dotenv = "^1.0.0"
flask-login = "0.6.2"
requests = "^2.31.0"
flask-rbac = "^0.5.0"
flask-wtf = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
